--- a/game.ejs
+++ b/game.ejs
@@ -128,7 +128,8 @@ a:active {
      <script>
         async function getApiAndFadeIn() {
             let randomNumber = Math.floor(Math.random() * 100) + 1; // Generates a random number between 1 and 100
-            let res = await fetch(`https://numbersapi.com/${randomNumber}`);
+            let res = await fetch(`http://numbersapi.com/${randomNumber}`);
+            
             let data = await res.text();
             fadeInAndDisplay(data);
         }
