--- a/loginPage.ejs
+++ b/loginPage.ejs
@@ -86,6 +86,8 @@ button {
 
         const storedUsername = localStorage.getItem('username');
         const storedPassword = localStorage.getItem('password');
+        loginButton.disabled = true;
+        signupButton.disabled = true;
 
         if (storedUsername) {
             console.log(storedUsername,storedPassword)
@@ -105,10 +107,14 @@ button {
                 console.log('Login successful');
                 // Navigate to the start.html page
                 window.location.href = '/start?username='+storedUsername;
+                loginButton.disabled = false;
+                signupButton.disabled = false;
             }
             })
             .catch(error => {
             console.error('Error:', error);
+            loginButton.disabled = false;
+            signupButton.disabled = false;
             alert('Login credentials were incorrect');
             });
         }
@@ -134,9 +140,13 @@ button {
                 localStorage.setItem('password', password);
                 // Navigate to the start.html page
                 window.location.href = '/start?username='+username;
+                loginButton.disabled = false;
+            signupButton.disabled = false;
             } else {
                 // Handle login error
                 console.error('Login failed');
+                loginButton.disabled = false;
+                signupButton.disabled = false;
             }
             })
             .catch(error => {
@@ -165,13 +175,19 @@ button {
                 localStorage.setItem('password', password);
                 // Navigate to the start.html page
                 window.location.href = '/start?username='+username;
+                loginButton.disabled = false;
+                signupButton.disabled = false;
             } else {
                 // Handle signup error
                 console.error('Signup failed');
+                loginButton.disabled = false;
+                signupButton.disabled = false;
             }
             })
             .catch(error => {
             console.error('Error:', error);
+            loginButton.disabled = false;
+            signupButton.disabled = false;
             });
         });
         });
